--- a/programming/language/java/hamcrest/pspec.xml
+++ b/programming/language/java/hamcrest/pspec.xml
@@ -11,6 +11,7 @@
         <License>BSD</License>
         <IsA>library</IsA>
         <Summary>Library of matchers for building test expressions</Summary>
+        <Description>Provides a library of matcher objects (also known as constraints or predicates) allowing 'match' rules to be defined declaratively, to be used in other frameworks. Typical scenarios include testing frameworks, mocking libraries and UI validation rules.</Description>
         <Archive sha1sum="e7c8511e3702545eb50b38e5aa2c3d887d8393ef" type="targz">http://hamcrest.googlecode.com/files/hamcrest-1.1.tgz</Archive>
         <BuildDependencies>
             <Dependency>sun-jdk</Dependency>
