--- a/programming/language/lisp/guile/pspec.xml
+++ b/programming/language/lisp/guile/pspec.xml
@@ -13,6 +13,7 @@
         <IsA>app:console</IsA>
         <IsA>library</IsA>
         <Summary>GNU Scheme interpreter and library</Summary>
+        <Description>GUILE (GNU's Ubiquitous Intelligent Language for Extension) is a library implementation of the Scheme programming language, written in C. GUILE provides a machine-independent execution platform that can be linked in as a library during the building of extensible programs.</Description>
         <Archive sha1sum="24cd2f06439c76d41d982a7384fe8a0fe5313b54" type="targz">mirrors://gnu/guile/guile-1.8.7.tar.gz</Archive>
         <Patches>
             <Patch level="1">as-needed.patch</Patch>
