--- a/programming/language/perl/perl-GSSAPI/pspec.xml
+++ b/programming/language/perl/perl-GSSAPI/pspec.xml
@@ -11,6 +11,7 @@
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>Perl extension providing access to the GSSAPIv2 library</Summary>
+        <Description>This module gives access to the routines of the GSSAPI library, as described in rfc2743 and rfc2744 and implemented by the Kerberos-1.2 distribution from MIT.</Description>
         <Archive sha1sum="c857485532e92e266a75b56ed247284f94b2d3d4" type="targz">mirrors://cpan/authors/id/A/AG/AGROLMS/GSSAPI-0.28.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>mit-kerberos</Dependency>
