--- a/programming/language/perl/perl-Sub-Uplevel/pspec.xml
+++ b/programming/language/perl/perl-Sub-Uplevel/pspec.xml
@@ -11,6 +11,7 @@
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>Module to apparently run a function in a higher stack frame</Summary>
+        <Description>Like Tcl's uplevel() function, but not quite so dangerous. The idea is just to fool caller(). All the really naughty bits of Tcl's uplevel() are avoided.</Description>
         <Archive sha1sum="c75150907d54fa51038fe70ee93993b45da96c8d" type="targz">mirrors://cpan/authors/id/D/DA/DAGOLDEN/Sub-Uplevel-0.22.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.1">perl</Dependency>
