--- a/programming/language/python/wxPython/pspec.xml
+++ b/programming/language/python/wxPython/pspec.xml
@@ -11,6 +11,7 @@
         <License>wxWinLL-3</License>
         <IsA>library</IsA>
         <Summary>Python bindings for wxGTK</Summary>
+        <Description>wxPython is a GUI toolkit for the Python programming language. It allows Python programmers to create programs with a robust, highly functional graphical user interface, simply and easily. It is implemented as a Python extension module (native code) that wraps the popular wxWindows cross platform GUI library, which is written in C++.</Description>
         <Archive sha1sum="18982edc236a1d87e4eef018928358c925aa5b17" type="tarbz2">mirrors://sourceforge/wxpython/wxPython-src-2.8.11.0.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>wxGTK-devel</Dependency>
