--- a/programming/language/tcl/expect/pspec.xml
+++ b/programming/language/tcl/expect/pspec.xml
@@ -12,6 +12,7 @@
         <IsA>app:console</IsA>
         <IsA>library</IsA>
         <Summary>Tool for automating interactive applications</Summary>
+        <Description>Expect is a tcl application for automating and testing interactive applications such as telnet, ftp, passwd, fsck, rlogin, tip, etc. Expect makes it easy for a script to control another program and interact with it.</Description>
         <Archive sha1sum="6e317b3509b6388c725e3bd5184000c2a2a69900" type="targz">mirrors://sourceforge/expect/expect-5.44.1.15.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>tcl</Dependency>
