--- a/programming/language/java/hsqldb/pspec.xml
+++ b/programming/language/java/hsqldb/pspec.xml
@@ -11,6 +11,7 @@
         <License>as-is</License>
         <IsA>library</IsA>
         <Summary>A relational database engine written in Java, with a JDBC driver</Summary>
+        <Description>HSQLdb is a relational database engine written in JavaTM , with a JDBC driver, supporting a subset of ANSI-92 SQL. It offers a small (about 100k), fast database engine which offers both in memory and disk based tables. Embedded and server modes are available.</Description>
         <Archive sha1sum="7168b0f40aa5c72267899601c116d2348d2f56ec" type="zip">mirrors://sourceforge/project/hsqldb/hsqldb/hsqldb_1_8_0/hsqldb_1_8_0_10.zip</Archive>
         <!-- Do not upgrade this package to version 1.8.1 series unless you are sure that OpenOffice supports that version -->
         <BuildDependencies>
