--- a/programming/language/R/pspec.xml
+++ b/programming/language/R/pspec.xml
@@ -12,6 +12,7 @@
         <License>LGPLv2.1</License>
         <IsA>app:console</IsA>
         <Summary>A free software environment for statistical computing and graphics</Summary>
+        <Description>This package includes the core R userspace and all R development components.</Description>
         <Archive sha1sum="0b36780627f3cc5cea3f41e0b717ed7ee92ba086"  type="targz">http://cran.r-project.org/src/base/R-2/R-2.11.1.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>libXmu-devel</Dependency>
