--- a/programming/language/perl/perl-Device-SerialPort/pspec.xml
+++ b/programming/language/perl/perl-Device-SerialPort/pspec.xml
@@ -11,6 +11,7 @@
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>Perl interface to the POSIX serial and modem routines</Summary>
+        <Description>This module provides an object-based user interface essentially identical to the one provided by the Win32::SerialPort module.</Description>
         <Archive sha1sum="c2e34c4cbbf3bc578c5b7fd2790906bc0a5d4cf0" type="targz">mirrors://cpan/authors/id/C/CO/COOK/Device-SerialPort-1.04.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.1">perl</Dependency>
