--- a/programming/language/perl/perl-SVN-Simple/pspec.xml
+++ b/programming/language/perl/perl-SVN-Simple/pspec.xml
@@ -11,6 +11,7 @@
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>A simple interface for SVN</Summary>
+        <Description>SVN::Simple::Edit wraps the subversion delta editor with a perl friendly interface and then you could easily drive it for describing changes to a tree. A common usage is to wrap the commit editor, so you could make commits to a subversion repository easily.</Description>
         <Archive sha1sum="3a47dbe7fb95f19eefe24ad29f7d67bc074708fc" type="targz">mirrors://cpan/authors/id/C/CL/CLKAO/SVN-Simple-0.28.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>subversion</Dependency>
