--- a/programming/language/perl/perl-Test-Exception/pspec.xml
+++ b/programming/language/perl/perl-Test-Exception/pspec.xml
@@ -11,6 +11,7 @@
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>Module for testing exception based codes</Summary>
+        <Description>This module provides a few convenience methods for testing exception based code. It is built with Test::Builder and plays happily with Test::More and friends.</Description>
         <Archive sha1sum="dfa3e8a5ce8fb81906f5ece87139ed10df0c4c4c" type="targz">mirrors://cpan/authors/id/A/AD/ADIE/Test-Exception-0.29.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>perl-Sub-Uplevel</Dependency>
