--- a/programming/language/python/python-simplejson/pspec.xml
+++ b/programming/language/python/python-simplejson/pspec.xml
@@ -11,6 +11,7 @@
         <License>MIT</License>
         <IsA>library</IsA>
         <Summary>Simple, fast, extensible JSON encoder/decoder for Python</Summary>
+        <Description>simplejson is a simple, fast, complete, correct and extensible JSON encoder and decoder for Python 2.5+. It is pure Python code with no dependencies, but includes an optional C extension for a serious speed boost.</Description>
         <Archive sha1sum="106fe3481c9a3a9488cbe7d212eca7671837783f" type="targz">http://pypi.python.org/packages/source/s/simplejson/simplejson-2.1.1.tar.gz</Archive>
     </Source>
 
