Fix replace typo

--- a/tex/language/texlive-lang-croatian/pspec.xml
+++ b/tex/language/texlive-lang-croatian/pspec.xml
@@ -24,7 +24,7 @@
              <Dependency>texlive-basic</Dependency>
          </RuntimeDependencies>
          <Replaces>
-             <Package>texlive-lang-croatian</Package>
+             <Package>texlive-langcroatian</Package>
              <Package>tetex-texmf</Package>
          </Replaces>
         <Files>
