Add description tag

--- a/programming/language/python/python-FormEncode/pspec.xml
+++ b/programming/language/python/python-FormEncode/pspec.xml
@@ -11,6 +11,7 @@
         <License>LGPLv2.1</License>
         <IsA>library</IsA>
         <Summary>FormEncode is a validation and form generation package for Python</Summary>
+        <Description>python-FormEncode validates and converts nested structures. It allows for a declarative form of defining the validation, and decoupled processes for filling and generating forms.</Description>
         <Archive sha1sum="573359ec15934be9b1e74c11e1796b8df872c677" type="targz">http://pypi.python.org/packages/source/F/FormEncode/FormEncode-1.2.2.tar.gz</Archive>
     </Source>
 
