Add descriptions of my packages

--- a/programming/language/tcl/tcltk/pspec.xml
+++ b/programming/language/tcl/tcltk/pspec.xml
@@ -11,6 +11,7 @@
         <License>as-is</License>
         <IsA>library</IsA>
         <Summary>An X11 toolkit implemented with the Tcl scripting language</Summary>
+        <Description>Tk is an X Windows widget set designed to work closely with the tcl scripting language. It allows you to write simple programs with full featured GUIs in only a little more time then it takes to write a text based interface.</Description>
         <Archive sha1sum="ea13b9d0bf611c7671c488bc0b5f3f739ad7e399" type="targz">mirrors://sourceforge/tcl/tk8.5.8-src.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="8.5.8">tcl-devel</Dependency>
