--- a/programming/language/tcl/tcltk/translations.xml
+++ b/programming/language/tcl/tcltk/translations.xml
@@ -4,6 +4,7 @@
         <Name>tcltk</Name>
         <Summary xml:lang="tr">Tcl betik dili ile yazılmış X11 araç ve kütüphaneleri</Summary>
         <Summary xml:lang="fr">Tk est une boîte à outils X11 implémentée avec le langage de script Tcl.</Summary>
+        <Description xml:lang="tr">Tk, tcl betik dili ile birlikte kullanılması için tasarlanmış bir X Windows araç setidir. Metin tabanlı arayüzlere oranla daha kısa sürede tam özellikli grafik arayüzlere sahip basit programlar yazmanızı sağlar.</Description>
     </Source>
 
     <Package>
