--- a/programming/language/python/python-qt/pspec.xml
+++ b/programming/language/python/python-qt/pspec.xml
@@ -13,17 +13,16 @@
         <IsA>library</IsA>
         <Summary>A set of Python bindings for the Qt 4.x Toolkit</Summary>
         <Description>Qt is a set of C++ libraries and development tools that includes platform independent abstractions for graphical user interfaces, networking, threads, Unicode, regular expressions, SQL databases, SVG, OpenGL, XML, and user and application settings. PyQt implements 440 of these classes as a set of Python modules.</Description>
-        <Archive sha1sum="79170b33e3c4ee5716c48e131dafd30147b01c7c" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/PyQt4/PyQt-x11-gpl-4.7.6.tar.gz</Archive>
+        <Archive sha1sum="ba2953b4946d00022b8d86771936f065d18420e3" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/PyQt4/PyQt-x11-gpl-snapshot-4.8-eac5dd92c907.tar.gz</Archive>
         <BuildDependencies>
             <Dependency versionFrom="4.7.0_beta2">qt-devel</Dependency>
-            <Dependency versionFrom="4.11.1">sip-devel</Dependency>
+            <Dependency releaseFrom="41">sip-devel</Dependency>
             <Dependency versionFrom="4.7.0_beta2">qt-webkit</Dependency>
             <Dependency versionFrom="4.4.2">phonon-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch>add_gettext_support.patch</Patch>
-            <Patch level="1">fix-pyuic-encoding.diff</Patch>
-            <Patch level="1">fix-pyuic-qstring-issue.diff</Patch>
+            <Patch level="1">fix-flag-issue.diff</Patch>
         </Patches>
     </Source>
 
@@ -32,10 +31,10 @@
         <Summary>Development files for python-qt</Summary>
         <RuntimeDependencies>
             <Dependency>qt-devel</Dependency>
-            <Dependency release="51">python-qt</Dependency>
-            <Dependency release="51">python-qt-webkit</Dependency>
-            <Dependency release="51">python-qt-phonon</Dependency>
-            <Dependency versionFrom="4.11.1">sip-devel</Dependency>
+            <Dependency release="52">python-qt</Dependency>
+            <Dependency release="52">python-qt-webkit</Dependency>
+            <Dependency release="52">python-qt-phonon</Dependency>
+            <Dependency releaseFrom="41">sip-devel</Dependency>
         </RuntimeDependencies>
         <Conflicts>
             <Package releaseTo="45">PyQt-webkit</Package>
@@ -54,7 +53,7 @@
         <Name>python-qt</Name>
         <RuntimeDependencies>
             <Dependency versionFrom="4.7.0_beta2">qt</Dependency>
-            <Dependency versionFrom="4.11">sip</Dependency>
+            <Dependency releaseFrom="41">sip</Dependency>
         </RuntimeDependencies>
         <Replaces>
             <Package>PyQt</Package>
@@ -123,6 +122,13 @@
     </Package>
 
     <History>
+        <Update release="52">
+            <Date>2010-09-28</Date>
+            <Version>4.8_20100928</Version>
+            <Comment>Version bump to latest snapshot to include latest fixes.</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="51">
             <Date>2010-09-16</Date>
             <Version>4.7.6</Version>
