Replaces python-xdg

--- a/programming/language/python/python-pyxdg/pspec.xml
+++ b/programming/language/python/python-pyxdg/pspec.xml
@@ -19,6 +19,7 @@
         <Name>python-pyxdg</Name>
         <Replaces>
             <Package>pyxdg</Package>
+            <Package>python-xdg</Package>
         </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
