--- a/programming/language/python/python-qt/pspec.xml
+++ b/programming/language/python/python-qt/pspec.xml
@@ -22,7 +22,7 @@
         </BuildDependencies>
         <Patches>
             <Patch>add_gettext_support.patch</Patch>
-            <Patch level="1">fix-flag-issue.diff</Patch>
+            <Patch level="1">fix-scpk-and-flag-issue.diff</Patch>
         </Patches>
     </Source>
 
