--- a/desktop/kde/l10n/kde-l10n-bg/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-bg/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:bg</IsA>
         <Summary>Bulgarian KDE4 internationalization package</Summary>
         <Description>kde-l10n-bg is the KDE4 internationalization package that provides Bulgarian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="3ec20defb957554f32d2b24d957c3ee70d25486c">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-bg-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="28ed7610d9be3831a0cef5b951fa2568140f5e1c">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-bg-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
