--- a/desktop/kde/l10n/kde-l10n-en_GB/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-en_GB/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:en_GB</IsA>
         <Summary>British English KDE4 internationalization package</Summary>
         <Description>kde-l10n-en_GB is the KDE4 internationalization package that provides British English translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="5f1bcae32992d3faf5d0cf5973ae01aa46cea5b2">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-en_GB-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="b9e921548959b55e58240c666150c8b4b67f085a">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-en_GB-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
