--- a/desktop/kde/l10n/kde-l10n-it/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-it/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:it</IsA>
         <Summary>Italian KDE4 internationalization package</Summary>
         <Description>kde-l10n-it is the KDE4 internationalization package that provides Italian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="5db77f77757cef62c62f95f2416875ac5f23214a">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-it-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="8d99eea9d09b056dac36b95c23f6a46cf4611e0e">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-it-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="28">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="27">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
