--- a/desktop/kde/l10n/kde-l10n-nn/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-nn/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:nn</IsA>
         <Summary>Norwegian Nynorsk KDE4 internationalization package</Summary>
         <Description>kde-l10n-nn is the KDE4 internationalization package that provides Norwegian Nynorsk translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="cb84ad61782fb438e69d2391708ce48bc728d6b7">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-nn-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="87223f7ec2d4295977c94db1ad6be38466cc0706">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-nn-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
