--- a/desktop/kde/l10n/kde-l10n-ru/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ru/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ru</IsA>
         <Summary>Russian KDE4 internationalization package</Summary>
         <Description>kde-l10n-ru is the KDE4 internationalization package that provides Russian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="496e9412e68bded21d24b0e9ce09718103c06718">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-ru-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="805802d600422aae2710d3e3e9f61d10f99528ff">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-ru-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
