--- a/desktop/kde/l10n/kde-l10n-cs/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-cs/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:cs</IsA>
         <Summary>Czech KDE4 internationalization package</Summary>
         <Description>kde-l10n-cs is the KDE4 internationalization package that provides Czech translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="d0140358ee2a7ea836e5f5fdd61bb88ca347fd54">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-cs-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="c6ea1478000224a97f544fe409b8fcdd9d3af0ea">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-cs-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="19">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="18">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
