--- a/desktop/kde/l10n/kde-l10n-et/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-et/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:et</IsA>
         <Summary>Estonian KDE4 internationalization package</Summary>
         <Description>kde-l10n-et is the KDE4 internationalization package that provides Estonian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="f062fead3019c3a7b8743acb2d44d066cde9bc27">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-et-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="288b33cf7149aabeec2c98d20043dc6419560dcd">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-et-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
