--- a/desktop/kde/l10n/kde-l10n-fi/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-fi/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:fi</IsA>
         <Summary>Finnish KDE4 internationalization package</Summary>
         <Description>kde-l10n-fi is the KDE4 internationalization package that provides Finnish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="01b1eb401a6de64931c834a6f02b8dfb22495f1b">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-fi-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="410eb59b9af4c785e8b2dab8897be622ff20662d">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-fi-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
