--- a/desktop/kde/l10n/kde-l10n-fr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-fr/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:fr</IsA>
         <Summary>French KDE4 internationalization package</Summary>
         <Description>kde-l10n-fr is the KDE4 internationalization package that provides French translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="274fd4c25db8f197a9811348065f9289ba6640eb">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-fr-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="3d0886d865feeddfd76a51bdc09f0c0dd35b2d68">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-fr-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
