--- a/desktop/kde/l10n/kde-l10n-he/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-he/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:he</IsA>
         <Summary>Hebrew KDE4 internationalization package</Summary>
         <Description>kde-l10n-he is the KDE4 internationalization package that provides Hebrew translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="c68cf0207361ab174e9aaf930f7fa8476c6d3c5d">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-he-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="5a6cd056e50bbf8423ec0900fa145304c2fae515">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-he-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="14">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="13">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
