--- a/desktop/kde/l10n/kde-l10n-hu/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-hu/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:hu</IsA>
         <Summary>Hungarian KDE4 internationalization package</Summary>
         <Description>kde-l10n-hu is the KDE4 internationalization package that provides Hungarian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="6c40ee44abc9a35c088276f4176f92c250e6d56a">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-hu-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="6dc679079ee23319bccd4c3eb563ccfb597ca61e">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-hu-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
