--- a/desktop/kde/l10n/kde-l10n-ko/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ko/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ko</IsA>
         <Summary>Korean KDE4 internationalization package</Summary>
         <Description>kde-l10n-ko is the KDE4 internationalization package that provides Korean translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="ca917499ec4eb0de0ab92dae73f40ff74207f4bc">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-ko-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="9b1538a38ba6cdfe5d1f6d89e8b73f70c4d09e24">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-ko-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
