--- a/desktop/kde/l10n/kde-l10n-lt/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-lt/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:lt</IsA>
         <Summary>Lithuanian KDE4 internationalization package</Summary>
         <Description>kde-l10n-lt is the KDE4 internationalization package that provides Lithuanian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="b2958b2ee5c4d736294002499e6a842e0b0c397c">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-lt-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="88d1a3eb022f788f4d229a6716a0b06241c73e40">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-lt-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="19">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="18">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
