--- a/desktop/kde/l10n/kde-l10n-ml/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ml/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ml</IsA>
         <Summary>Malayalam KDE4 internationalization package</Summary>
         <Description>kde-l10n-ml is the KDE4 internationalization package that provides Malayalam translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="081bc1668c53f974933103094491b317c83998a5">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-ml-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="8111b3af1a7fd809cc68c365657a1b0524bcf34e">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-ml-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="19">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="18">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
