--- a/desktop/kde/l10n/kde-l10n-nds/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-nds/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:nds</IsA>
         <Summary>Low Saxon KDE4 internationalization package</Summary>
         <Description>kde-l10n-nds is the KDE4 internationalization package that provides Low Saxon translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="e4d038108caa0aacbe590e17ed696c9cadf851cd">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-nds-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="743c099839c11289fb0b484bffd3f1fb4642e84e">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-nds-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
