--- a/desktop/kde/l10n/kde-l10n-nl/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-nl/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:nl</IsA>
         <Summary>Dutch KDE4 internationalization package</Summary>
         <Description>kde-l10n-nl is the KDE4 internationalization package that provides Dutch translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="70477678e6c9a50cdac877cc56e6554206bc28ab">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-nl-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="e631eee94c69f02c48455f1f8d47f86f2b982eb8">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-nl-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="28">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="27">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
