--- a/desktop/kde/l10n/kde-l10n-pl/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-pl/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:pl</IsA>
         <Summary>Polish KDE4 internationalization package</Summary>
         <Description>kde-l10n-pl is the KDE4 internationalization package that provides Polish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="8d90e7411a096e9d44e222199c17add5ea308f82">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-pl-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="add86d69a4cdee3df4a22bbf264cc85aea82ef0d">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-pl-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="28">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="27">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
