--- a/desktop/kde/l10n/kde-l10n-ro/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ro/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ro</IsA>
         <Summary>Romanian KDE4 internationalization package</Summary>
         <Description>kde-l10n-ro is the KDE4 internationalization package that provides Romanian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="bd8cafffb4f038a128843ef5387214678757f6d2">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-ro-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="c1996cf1eba0a26f2089923f15edb22ee44ee108">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-ro-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="14">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="13">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
