--- a/desktop/kde/l10n/kde-l10n-sl/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-sl/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:sl</IsA>
         <Summary>Slovenian KDE4 internationalization package</Summary>
         <Description>kde-l10n-sl is the KDE4 internationalization package that provides Slovenian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="d40443159074ada0fe073559ddd7bfefca6fbcfd">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-sl-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="09971e41490deaddc283aadbad023050d8863a3b">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-sl-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
