--- a/desktop/kde/l10n/kde-l10n-sr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-sr/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:sr</IsA>
         <Summary>Serbian KDE4 internationalization package</Summary>
         <Description>kde-l10n-sr is the KDE4 internationalization package that provides Serbian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="7b28e4447e3a38c2efb6cecd2b629dddcdfc9360">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-sr-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="d9bd6317967a742d036bd63e452ff81c2eee1ae4">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-sr-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -32,6 +32,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="14">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="13">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
