--- a/desktop/kde/l10n/kde-l10n-th/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-th/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:th</IsA>
         <Summary>Thai KDE4 internationalization package</Summary>
         <Description>kde-l10n-ku is the KDE4 internationalization package that provides Thai translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="3d7f358d0b8a8462a9f90a214bba69da78ecc41a">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-th-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="115b06553f62d25124b049fdddba16f47ee6b730">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-th-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="16">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="15">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
