--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:tr</IsA>
         <Summary>Turkish KDE4 internationalization package</Summary>
         <Description>kde-l10n-tr is the KDE4 internationalization package that provides Turkish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="44b0857560fbdd15889b56378fee1710744ad630">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-tr-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="dabf8eed07c421cc7de9c2004d7a66522828b834">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-tr-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -87,6 +87,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="51">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="50">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
