--- a/desktop/kde/l10n/kde-l10n-zh_TW/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-zh_TW/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:zh_TW</IsA>
         <Summary>Chinese Traditional KDE4 internationalization package</Summary>
         <Description>kde-l10n-zh_TW is the KDE4 internationalization package that provides Chinese Traditional translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="b521b1bff7cfb4a842e88b602426dcaab5f69a41">mirrors://kde/stable/4.5.1/src/kde-l10n/kde-l10n-zh_TW-4.5.1.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="1617d655341431ff9b5dcfce4f5a9d229eb06df5">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-zh_TW-4.5.2.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="27">
+            <Date>2010-10-05</Date>
+            <Version>4.5.2</Version>
+            <Comment>Version bump to 4.5.2</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="26">
             <Date>2010-09-19</Date>
             <Version>4.5.1</Version>
