--- a/multimedia/sound/clementine/files/tr.po
+++ b/multimedia/sound/clementine/files/tr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: clementine\n"
 "Report-Msgid-Bugs-To: H. İbrahim Güngör <ibrahim@pardus.org.tr>\n"
 "POT-Creation-Date: 2010-09-08 17:03+0000\n"
-"PO-Revision-Date: 2010-10-05 23:41+0300\n"
+"PO-Revision-Date: 2010-10-06 19:28+0300\n"
 "Last-Translator: zeugma <Unknown>\n"
 "Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -1345,7 +1345,7 @@ msgid "Playlist options"
 msgstr "Çalma listesi seçenekleri"
 
 msgid "Playlist search"
-msgstr "Çalma listesi araması"
+msgstr "Çalma listesinde ara"
 
 msgid "Pop"
 msgstr "Pop"
