--- a/programming/language/python/gnome-python/translations.xml
+++ b/programming/language/python/gnome-python/translations.xml
@@ -3,6 +3,7 @@
     <Source>
         <Name>gnome-python</Name>
         <Summary xml:lang="tr">Python için GNOME 2 bağlayıcıları</Summary>
+        <Description>gnome-python paketi, GNOME ortamı için çeşitli python bağlayıcılarını içerir.</Description>
     </Source>
     <Package>
         <Name>gnome-python-docs</Name>
