--- a/programming/language/python/gnome-python/pspec.xml
+++ b/programming/language/python/gnome-python/pspec.xml
@@ -11,6 +11,7 @@
         <License>LGPLv2</License>
         <IsA>library</IsA>
         <Summary>GNOME 2 bindings for Python</Summary>
+        <Description>Package of gnome-python contains various python bindings for the GNOME environment.</Description>
         <Archive sha1sum="de7e66aff141c4c64bc25cdb85193fab0899b983" type="tarbz2">mirrors://gnome/gnome-python/2.28/gnome-python-2.28.1.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>pygtk-devel</Dependency>
