--- a/programming/language/java/db4-java/pspec.xml
+++ b/programming/language/java/db4-java/pspec.xml
@@ -10,6 +10,7 @@
         <License>DB</License>
         <IsA>library</IsA>
         <Summary>Java bindings for Berkeley DB</Summary>
+        <Description>db4-java contains the libraries for building programs which use the Berkeley DB in Java.</Description>
         <Archive sha1sum="ab36c170dda5b2ceaad3915ced96e41c6b7e493c" type="targz">http://download.oracle.com/berkeley-db/db-4.8.30.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>sun-jdk</Dependency>
@@ -28,6 +29,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-10-07</Date>
+            <Version>4.8.30</Version>
+            <Comment>Add description.</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-09-16</Date>
             <Version>4.8.30</Version>
