--- a/programming/language/perl/perl-Test-Simple/pspec.xml
+++ b/programming/language/perl/perl-Test-Simple/pspec.xml
@@ -12,6 +12,7 @@
         <License>Artistic</License>
         <IsA>library</IsA>
         <Summary>Test::Simple, basic utilities for writing tests</Summary>
+        <Description>perl-Test-Simple provides basic Perl utilities for writing tests.</Description>
         <Archive sha1sum="d5d5f657a363d8328c1c2d4972f879df4f6496b1" type="targz">mirrors://cpan/authors/id/M/MS/MSCHWERN/Test-Simple-0.96.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.1">perl</Dependency>
