Remove perl-Test-Simple package, as it is included in perl-5.12.1. perl-Test-Pod is added for the tests to build deps. Now the package is ready for 2011.

--- a/programming/language/perl/perl-Test-Warn/pspec.xml
+++ b/programming/language/perl/perl-Test-Warn/pspec.xml
@@ -16,9 +16,9 @@
         <Archive sha1sum="378ff7f44b5268c7b91b01da2e16e2e09aa2422b" type="targz">mirrors://cpan/authors/id/C/CH/CHORNY/Test-Warn-0.22.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.1">perl</Dependency>
-            <Dependency>perl-Test-Simple</Dependency>
             <Dependency>perl-Sub-Uplevel</Dependency>
             <Dependency>perl-Tree-DAG_Node</Dependency>
+            <Dependency>perl-Test-Pod</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -26,7 +26,6 @@
         <Name>perl-Test-Warn</Name>
         <RuntimeDependencies>
             <Dependency version="5.12.1">perl</Dependency>
-            <Dependency>perl-Test-Simple</Dependency>
             <Dependency>perl-Sub-Uplevel</Dependency>
             <Dependency>perl-Tree-DAG_Node</Dependency>
         </RuntimeDependencies>
@@ -38,6 +37,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2010-10-07</Date>
+            <Version>0.22</Version>
+            <Comment>Remove perl-Test-Simple package, as it is included in perl-5.12.1. perl-Test-Pod is added for the tests to build deps. Now the package is ready for 2011.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="2">
             <Date>2010-10-05</Date>
             <Version>0.22</Version>
