--- a/programming/language/python/python-ecore/pspec.xml
+++ b/programming/language/python/python-ecore/pspec.xml
@@ -12,32 +12,49 @@
         <IsA>library</IsA>
         <Summary>Ecore Python binding</Summary>
         <Description>python-ecore is the Python binding of Ecore X abstraction library.</Description>
-        <Archive sha1sum="88bca4032b5241f121462b776055b330812ba571" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-ecore-0.5.0_49588.tar.bz2</Archive>
+        <!--<Archive sha1sum="88bca4032b5241f121462b776055b330812ba571" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-ecore-0.5.0_49588.tar.bz2</Archive>-->
+        <Archive sha1sum="e25f317e3827ce39572571424ac55fdb775186c9" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-ecore-0.7.3.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>pyrex</Dependency>
-            <Dependency>cython</Dependency>
-            <Dependency versionFrom="0.9.9.49539">evas-devel</Dependency>
-            <Dependency versionFrom="0.9.9.49539">eina-devel</Dependency>
-            <Dependency versionFrom="0.9.9.49539">ecore-devel</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">ecore-devel</Dependency>
+            <Dependency versionFrom="0.7.3">python-evas-devel</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>python-ecore</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="0.9.9.49539">eina</Dependency>
-            <Dependency versionFrom="0.9.9.49539">evas</Dependency>
-            <Dependency versionFrom="0.9.9.49539">ecore</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">ecore</Dependency>
+            <Dependency versionFrom="0.7.3">python-evas</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
+            <Path fileType="data">/usr/share/python-ecore</Path>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
 
+    <Package>
+        <Name>python-ecore-devel</Name>
+        <Summary>Development files for python-ecore</Summary>
+        <RuntimeDependencies>
+            <Dependency release="2">python-ecore</Dependency>
+        </RuntimeDependencies>
+        <Files>
+            <Path fileType="header">/usr/include</Path>
+            <Path fileType="data">/usr/lib/pkgconfig</Path>
+        </Files>
+    </Package>
+
     <History>
+        <Update release="2">
+            <Date>2010-10-03</Date>
+            <Version>0.7.3</Version>
+            <Comment>Version bump.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-06-09</Date>
             <Version>0.5.0_49588</Version>
