--- a/programming/language/python/python-ecore/translations.xml
+++ b/programming/language/python/python-ecore/translations.xml
@@ -5,4 +5,9 @@
         <Summary xml:lang="tr">Ecore Python bağlayıcısı</Summary>
         <Description xml:lang="tr">python-ecore Ecore X soyutlama katmanı kitaplığının Python bağlayıcısıdır.</Description>
     </Source>
+
+    <Package>
+        <Name>python-ecore-devel</Name>
+        <Summary xml:lang="tr">python-ecore için geliştirme dosyaları</Summary>
+    </Package>
 </PISI>
