--- a/programming/language/python/python-e_dbus/pspec.xml
+++ b/programming/language/python/python-e_dbus/pspec.xml
@@ -12,31 +12,37 @@
         <IsA>library</IsA>
         <Summary>E-DBus Python binding</Summary>
         <Description>python-e_dbus is the Python binding of e_dbus library.</Description>
-        <Archive sha1sum="278e2c496e23d565b176dc0e8c31206cd8a70e49" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-e_dbus-0.5.0_49588.tar.bz2</Archive>
+        <!--<Archive sha1sum="278e2c496e23d565b176dc0e8c31206cd8a70e49" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-e_dbus-0.5.0_49588.tar.bz2</Archive>-->
+        <Archive sha1sum="3bd018b3a88aa4e92426d52c68b765317176c182" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-e_dbus-0.7.3.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency>pyrex</Dependency>
-            <Dependency>cython</Dependency>
-            <Dependency versionFrom="0.9.9.49539">eina-devel</Dependency>
-            <Dependency versionFrom="0.9.9.49539">evas-devel</Dependency>
-            <Dependency versionFrom="0.9.9.49539">ecore-devel</Dependency>
-            <Dependency versionFrom="0.5.0.49539">e_dbus-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">ecore-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">e_dbus-devel</Dependency>
+            <Dependency versionFrom="0.7.3">python-ecore-devel</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>python-e_dbus</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="0.5.0.49539">e_dbus</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-evas</Dependency>
-            <Dependency versionFrom="0.5.0_49588">python-ecore</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">ecore</Dependency>
+            <Dependency versionFrom="1.0.0_beta1">e_dbus</Dependency>
+            <Dependency versionFrom="0.7.3">python-ecore</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
+            <Path fileType="data">/usr/lib/pkgconfig</Path>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-10-03</Date>
+            <Version>0.7.3</Version>
+            <Comment>Version bump.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-06-09</Date>
             <Version>0.5.0_49588</Version>
